# vtk-practice

./: CMakeLists.txt  TODO.txt  test.cpp
01_test/: CMakeLists.txt  test.cpp
02_cone_tut_step1/: CMakeLists.txt  tut.cpp
03_user_callback/: CMakeLists.txt  tut.cpp
04_stl_reader/: CMakeLists.txt  main.cpp
05_shrink/: CMakeLists.txt  main.cpp
06_pick/: main.cpp
06_pick_annotate/: CMakeLists.txt  thing.stl
07_annotate/: main.cpp
08_3Dannotate/: CMakeLists.txt  main.cpp
09_3Dwidget/: CMakeLists.txt  main.cpp
10_color_cells/: CMakeLists.txt  main.cpp
11_contour_quadric/: CMakeLists.txt  main.cpp  mathematica_version.txt
13_project_point_plane/: CMakeLists.txt  main.cpp
14_vtk_onboarding_assignment/: CMakeLists.txt  ComputeMass.cxx
